--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>no.sirktek</groupId>
     <artifactId>logistics-taxonomy</artifactId>
-    <version>2.0.0</version>
+    <version>${revision}</version>
     <packaging>jar</packaging>
 
     <name>Sirktek Logistics Taxonomy</name>
